build_output.txt
cargo :    Compiling parking_lot v0.12.5
At line:1 char:1
+ cargo build 2>&1 | Out-File -FilePath "build_output.txt" -Encoding ut ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling parking_lot v0.12.5:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
   Compiling regalloc2 v0.9.3
   Compiling tokio v1.52.2
   Compiling wasmparser v0.207.0
   Compiling tokio-util v0.7.18
   Compiling h2 v0.4.14
   Compiling tower v0.5.3
   Compiling tower-http v0.6.10
   Compiling cranelift-codegen v0.108.2
   Compiling hyper v1.9.0
   Compiling hyper-util v0.1.20
   Compiling tokio-native-tls v0.3.1
   Compiling wasmtime-types v21.0.2
   Compiling hyper-tls v0.6.0
   Compiling cranelift-frontend v0.108.2
   Compiling wasmprinter v0.207.0
   Compiling wasmtime-environ v21.0.2
   Compiling reqwest v0.12.28
   Compiling cranelift-wasm v0.108.2
   Compiling cranelift-native v0.108.2
   Compiling wasmtime-cache v21.0.2
   Compiling wasmtime-cranelift v21.0.2
   Compiling wasmtime-jit-debug v21.0.2
   Compiling hassle-rs v0.11.0
   Compiling wasmtime v21.0.2
   Compiling gpu-allocator v0.26.0
   Compiling rand v0.8.6
   Compiling d3d12 v22.0.0
   Compiling wgpu-hal v22.0.0
   Compiling opentelemetry_sdk v0.32.0
   Compiling tao v0.35.2
   Compiling reqwest v0.13.3
   Compiling rusqlite v0.32.1
   Compiling tauri-runtime-wry v2.11.1
   Compiling opentelemetry-http v0.32.0
   Compiling chrono v0.4.44
   Compiling opentelemetry-proto v0.32.0
   Compiling wgpu-core v22.1.0
   Compiling tokio-stream v0.1.18
   Compiling dashmap v6.1.0
   Compiling axum v0.7.9
   Compiling wgpu v22.1.0
   Compiling tauri v2.11.1
   Compiling uiautomation v0.25.0
   Compiling yrs v0.21.3
   Compiling text-splitter v0.18.1
   Compiling ollama-rs v0.2.6
   Compiling opentelemetry-otlp v0.32.0
   Compiling alaya v0.4.8
   Compiling tauri-plugin-shell v2.3.5
   Compiling phantom-core v0.3.0 (C:\Users\SANDIP\Desktop\Memory\KairoPhantom\phantom-core)
   Compiling phantom-overlay v0.3.0 (C:\Users\SANDIP\Desktop\Memory\KairoPhantom\phantom-overlay\src-tauri)
   Compiling tauri-plugin-global-shortcut v2.3.1
   Compiling wiggle v21.0.2
   Compiling cap-rand v3.4.5
warning: unused import: `TrayIconEvent`
 --> phantom-overlay\src-tauri\src\lib.rs:6:29
  |
6 |     tray::{TrayIconBuilder, TrayIconEvent},
  |                             ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: field `word_count` is never read
  --> phantom-overlay\src-tauri\src\phantom_bridge.rs:18:5
   |
16 | struct MaterializeResponse {
   |        ------------------- field in this struct
17 |     suggestion: String,
18 |     word_count: usize,
   |     ^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: associated function `ping` is never used
  --> phantom-overlay\src-tauri\src\phantom_bridge.rs:42:18
   |
23 | impl PhantomBridge {
   | ------------------ associated function in this implementation
...
42 |     pub async fn ping() -> bool {
   |                  ^^^^

warning: `phantom-overlay` (lib) generated 3 warnings (run `cargo fix --lib -p phantom-overlay` to apply 1 suggestion)
   Compiling wasmtime-wasi v21.0.2
   Compiling kairo-agent-sdk v0.1.0 (C:\Users\SANDIP\Desktop\Memory\KairoPhantom\kairo-agent-sdk)
error[E0425]: cannot find function `add_to_linker` in crate `wasmtime_wasi`
  --> kairo-agent-sdk\src\sandbox.rs:22:24
   |
22 |         wasmtime_wasi::add_to_linker(&mut linker, |s| s)?;
   |                        ^^^^^^^^^^^^^ not found in `wasmtime_wasi`

warning: unused import: `Path`
 --> kairo-agent-sdk\src\agent_registry.rs:1:17
  |
1 | use std::path::{Path, PathBuf};
  |                 ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `WasiCtx`
 --> kairo-agent-sdk\src\sandbox.rs:2:37
  |
2 | use wasmtime_wasi::{WasiCtxBuilder, WasiCtx};
  |                                     ^^^^^^^

error[E0277]: the `?` operator can only be applied to values that implement `Try`
  --> kairo-agent-sdk\src\sandbox.rs:24:20
   |
24 |           let wasi = WasiCtxBuilder::new()
   |  ____________________^
25 | |             .env("PROMPT", input_prompt)?
   | |_________________________________________^ the `?` operator cannot be applied to type `&mut WasiCtxBuilder`
   |
   = help: the nightly-only, unstable trait `Try` is not implemented for `&mut WasiCtxBuilder`

error[E0382]: borrow of moved value: `dir`
  --> kairo-agent-sdk\src\agent_registry.rs:80:27
   |
53 |             let mut watcher = notify::recommended_watcher(move |res: notify::Result<Event>| {
   |                                                           --------------------------------- value moved into 
closure here
...
58 |                         if let Ok(entries) = fs::read_dir(&dir) {
   |                                                            --- variable moved due to use in closure
...
80 |             watcher.watch(&dir, RecursiveMode::Recursive).unwrap();
   |                           ^^^^ value borrowed here after move
   |
   = note: move occurs because `dir` has type `PathBuf`, which does not implement the `Copy` trait
   = note: borrow occurs due to deref coercion to `Path`

warning: unused variable: `event`
  --> kairo-agent-sdk\src\agent_registry.rs:55:24
   |
55 |                     Ok(event) => {
   |                        ^^^^^ help: if this is intentional, prefix it with an underscore: `_event`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0277, E0382, E0425.
For more information about an error, try `rustc --explain E0277`.
warning: `kairo-agent-sdk` (lib) generated 3 warnings
error: could not compile `kairo-agent-sdk` (lib) due to 3 previous errors; 3 warnings emitted
warning: build failed, waiting for other jobs to finish...
